Bug 1395151 - Don't apply ancestors' opacity if the opacity item has an async opacity animation. r=birtles,mattwoodrow

MozReview-Commit-ID: KsxukpGrH6P

--HG--
extra : rebase_source : 3ffab9cbc5c204c7c60567a305f6177952abdb6c